Issue #2643: msync() is not called anymore when deallocating an open mmap object, only munmap().